--- a/mailtransport/smtpsettings.ui
+++ b/mailtransport/smtpsettings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>432</width>
-    <height>524</height>
+    <width>424</width>
+    <height>544</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -52,7 +52,33 @@
        <property name="spacing" >
         <number>6</number>
        </property>
-       <item row="12" column="1" >
+       <item row="2" column="3" >
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="2" column="1" >
+        <widget class="KIntNumInput" name="kcfg_port" >
+         <property name="value" >
+          <number>25</number>
+         </property>
+         <property name="minimum" >
+          <number>0</number>
+         </property>
+         <property name="maximum" >
+          <number>65536</number>
+         </property>
+        </widget>
+       </item>
+       <item row="12" column="2" >
         <spacer>
          <property name="orientation" >
           <enum>Qt::Vertical</enum>
@@ -78,7 +104,7 @@
          </property>
         </widget>
        </item>
-       <item row="11" column="1" >
+       <item row="11" column="1" colspan="3" >
         <widget class="KLineEdit" name="kcfg_localHostname" >
          <property name="enabled" >
           <bool>false</bool>
@@ -105,18 +131,8 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1" >
+       <item row="0" column="1" colspan="3" >
         <widget class="KLineEdit" name="kcfg_name" />
-       </item>
-       <item row="2" column="0" >
-        <widget class="QLabel" name="portLabel" >
-         <property name="text" >
-          <string>&amp;Port:</string>
-         </property>
-         <property name="buddy" >
-          <cstring>kcfg_port</cstring>
-         </property>
-        </widget>
        </item>
        <item row="3" column="0" >
         <widget class="QLabel" name="precommandLabel" >
@@ -128,16 +144,10 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1" >
-        <widget class="KLineEdit" name="kcfg_host" />
-       </item>
-       <item row="2" column="1" >
-        <widget class="KLineEdit" name="kcfg_port" />
-       </item>
-       <item row="3" column="1" >
+       <item row="3" column="1" colspan="3" >
         <widget class="KLineEdit" name="kcfg_precommand" />
        </item>
-       <item row="6" column="1" >
+       <item row="6" column="1" colspan="3" >
         <widget class="KLineEdit" name="kcfg_userName" >
          <property name="enabled" >
           <bool>false</bool>
@@ -170,7 +180,7 @@
          </property>
         </widget>
        </item>
-       <item row="7" column="1" >
+       <item row="7" column="1" colspan="3" >
         <widget class="KLineEdit" name="password" >
          <property name="enabled" >
           <bool>false</bool>
@@ -183,7 +193,7 @@
          </property>
         </widget>
        </item>
-       <item row="8" column="0" colspan="2" >
+       <item row="8" column="0" colspan="4" >
         <widget class="QCheckBox" name="kcfg_storePassword" >
          <property name="enabled" >
           <bool>false</bool>
@@ -193,23 +203,36 @@
          </property>
         </widget>
        </item>
-       <item row="4" column="0" colspan="2" >
+       <item row="4" column="0" colspan="4" >
         <widget class="KSeparator" name="kseparator_2" />
        </item>
-       <item row="9" column="0" colspan="2" >
+       <item row="9" column="0" colspan="4" >
         <widget class="KSeparator" name="kseparator_3" />
        </item>
-       <item row="5" column="0" colspan="2" >
+       <item row="5" column="0" colspan="4" >
         <widget class="QCheckBox" name="kcfg_requiresAuthentication" >
          <property name="text" >
           <string>Server &amp;requires authentication</string>
          </property>
         </widget>
        </item>
-       <item row="10" column="0" colspan="2" >
+       <item row="10" column="0" colspan="4" >
         <widget class="QCheckBox" name="kcfg_specifyHostname" >
          <property name="text" >
           <string>Sen&amp;d custom hostname to server</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1" colspan="3" >
+        <widget class="KLineEdit" name="kcfg_host" />
+       </item>
+       <item row="2" column="0" >
+        <widget class="QLabel" name="portLabel" >
+         <property name="text" >
+          <string>&amp;Port:</string>
+         </property>
+         <property name="buddy" >
+          <cstring>kcfg_port</cstring>
          </property>
         </widget>
        </item>
@@ -364,15 +387,9 @@
  <layoutfunction spacing="KDialog::spacingHint()" margin="KDialog::marginHint()" />
  <customwidgets>
   <customwidget>
-   <class>KButtonGroup</class>
-   <extends>QGroupBox</extends>
-   <header>kbuttongroup.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>KPushButton</class>
-   <extends>QPushButton</extends>
-   <header>kpushbutton.h</header>
+   <class>KLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>klineedit.h</header>
   </customwidget>
   <customwidget>
    <class>KSeparator</class>
@@ -380,9 +397,20 @@
    <header>kseparator.h</header>
   </customwidget>
   <customwidget>
-   <class>KLineEdit</class>
-   <extends>QLineEdit</extends>
-   <header>klineedit.h</header>
+   <class>KIntNumInput</class>
+   <extends>QWidget</extends>
+   <header>knuminput.h</header>
+  </customwidget>
+  <customwidget>
+   <class>KPushButton</class>
+   <extends>QPushButton</extends>
+   <header>kpushbutton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>KButtonGroup</class>
+   <extends>QGroupBox</extends>
+   <header>kbuttongroup.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <tabstops>
@@ -417,12 +445,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>141</x>
-     <y>215</y>
+     <x>152</x>
+     <y>254</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>162</x>
-     <y>242</y>
+     <x>175</x>
+     <y>287</y>
     </hint>
    </hints>
   </connection>
@@ -433,12 +461,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>228</x>
-     <y>215</y>
+     <x>239</x>
+     <y>254</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>229</x>
-     <y>271</y>
+     <x>242</x>
+     <y>322</y>
     </hint>
    </hints>
   </connection>
@@ -449,12 +477,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>68</x>
-     <y>215</y>
+     <x>79</x>
+     <y>254</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>78</x>
-     <y>244</y>
+     <x>89</x>
+     <y>289</y>
     </hint>
    </hints>
   </connection>
@@ -465,12 +493,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>118</x>
-     <y>215</y>
+     <x>129</x>
+     <y>254</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>78</x>
-     <y>273</y>
+     <x>89</x>
+     <y>324</y>
     </hint>
    </hints>
   </connection>
@@ -481,12 +509,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>200</x>
-     <y>334</y>
+     <x>211</x>
+     <y>397</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>193</x>
-     <y>361</y>
+     <x>206</x>
+     <y>430</y>
     </hint>
    </hints>
   </connection>
@@ -497,12 +525,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>120</x>
-     <y>334</y>
+     <x>131</x>
+     <y>397</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>78</x>
-     <y>363</y>
+     <x>89</x>
+     <y>432</y>
     </hint>
    </hints>
   </connection>
@@ -513,12 +541,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>50</x>
-     <y>215</y>
+     <x>61</x>
+     <y>254</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>58</x>
-     <y>299</y>
+     <x>69</x>
+     <y>356</y>
     </hint>
    </hints>
   </connection>
@@ -529,12 +557,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>215</x>
-     <y>205</y>
+     <x>226</x>
+     <y>254</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>215</x>
-     <y>285</y>
+     <x>110</x>
+     <y>102</y>
     </hint>
    </hints>
   </connection>
